# owlmaker

./: Cargo.toml  README.md  default.nix  docker.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: build-nix.yml
nix/: cargo.nix  rust.nix  sources.json
src/: dirs.rs  main.rs
