[package]
name = "owlmaker"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.7.0"
structopt = "0.3.21"
anyhow = "1.0.40"
walkdir = "2.3.2"
toml = "0.5.8"
serde = "1.0.124"
